--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body{
-	background-color: #000;
+	background: #000 url('/img/bg.jpg') top left repeat;
 	color: #fff;
 }
 
@@ -48,7 +48,9 @@ box-shadow: 10px 10px 82px 19px rgba(255,255,255,1);*/
 
 }
 
-
+#thankyou{
+	display: none;
+}
 
 #personal-table{ width: 100%; }
 
