--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,38 @@
 body{
-	background: #000 url('/img/bg.jpg') top left repeat;
+/*	background: #000 url('/img/bg2.jpg') top left repeat;*/
 	color: #fff;
 }
 
+@font-face { font-family: GalaxiePolarisCondensed-Book; src: url('../fonts/GalaxiePolarisCondensed-Book.otf'); } 
+@font-face { font-family: GalaxiePolarisCondensed-Bold; font-weight: bold; src: url('../fonts/GalaxiePolarisCondensed-Bold.otf'); }
+@font-face { font-family: GalaxiePolarisCondensed-Light; font-weight: bold; src: url('../fonts/GalaxiePolarisCondensed-Light.otf'); }
 
+
+h1{
+	font-family: GalaxiePolarisCondensed-Bold;
+    text-transform: uppercase;
+    font-size: 40px;
+    color: #fff;
+    text-align: center;
+    text-shadow: 4px 4px 2px rgba(0, 0, 0, 0.3);
+}
+
+h2{
+	color: #fff;
+    text-align: center;
+    font-family: GalaxiePolarisCondensed-Bold;
+    text-transform: uppercase;
+    font-size: 20px;
+    text-shadow: 4px 4px 2px rgba(0, 0, 0, 0.3);
+}
 
 .container{
 	width: 792px;
 	display: block;
 	margin: 0 auto;
 	padding: 0;
-	background: #000 url('/img/container-bg.jpg') top center repeat-y;
+	position: relative;
+	top: 60px;
 }
 
 .footer{
@@ -18,7 +40,7 @@ body{
 	bottom: -10px;
 }
 
-.content{ margin: 0px 130px;}
+.content{ margin: 0px 20px; }
 
 
 
@@ -184,6 +206,15 @@ input[type="radio"]:checked:after {
 	display: block;
 	width: 280px;
 	margin: 0 auto;
+	
+	
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#d0e4f7+0,73b1e7+24,0a77d5+50,539fe1+79,87bcea+100;Blue+Pipe+%231 */
+	background: rgb(208,228,247); /* Old browsers */
+	background: -moz-linear-gradient(top,  rgba(208,228,247,1) 0%, rgba(115,177,231,1) 24%, rgba(10,119,213,1) 50%, rgba(83,159,225,1) 79%, rgba(135,188,234,1) 100%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(top,  rgba(208,228,247,1) 0%,rgba(115,177,231,1) 24%,rgba(10,119,213,1) 50%,rgba(83,159,225,1) 79%,rgba(135,188,234,1) 100%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(to bottom,  rgba(208,228,247,1) 0%,rgba(115,177,231,1) 24%,rgba(10,119,213,1) 50%,rgba(83,159,225,1) 79%,rgba(135,188,234,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d0e4f7', endColorstr='#87bcea',GradientType=0 ); /* IE6-9 */
+	
 }
 
 .btnsubmit:hover {
@@ -220,9 +251,16 @@ input[type="radio"]:checked:after {
   color: #ffffff;
   font-size: 18px;
   padding: 14px;
-  border: solid #ae7c38 1px;
+  border: solid #fff 1px;
   text-decoration: none;
   text-transform: uppercase;
+
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#d0e4f7+0,73b1e7+24,0a77d5+50,539fe1+79,87bcea+100;Blue+Pipe+%231 */
+	background: rgb(208,228,247); /* Old browsers */
+	background: -moz-linear-gradient(top,  rgba(208,228,247,1) 0%, rgba(115,177,231,1) 24%, rgba(10,119,213,1) 50%, rgba(83,159,225,1) 79%, rgba(135,188,234,1) 100%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(top,  rgba(208,228,247,1) 0%,rgba(115,177,231,1) 24%,rgba(10,119,213,1) 50%,rgba(83,159,225,1) 79%,rgba(135,188,234,1) 100%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(to bottom,  rgba(208,228,247,1) 0%,rgba(115,177,231,1) 24%,rgba(10,119,213,1) 50%,rgba(83,159,225,1) 79%,rgba(135,188,234,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d0e4f7', endColorstr='#87bcea',GradientType=0 ); 
 }
 
 .btn:hover {
@@ -234,4 +272,14 @@ input[type="radio"]:checked:after {
   background-image: -o-linear-gradient(top, #e6d398, #ae7c38);
   background-image: linear-gradient(to bottom, #e6d398, #ae7c38);
   text-decoration: none;
+
+	background: rgb(208,228,247); /* Old browsers */
+	background: -moz-linear-gradient(top,  rgba(208,228,247,1) 0%, rgba(115,177,231,1) 24%, rgba(10,119,213,1) 50%, rgba(83,159,225,1) 79%, rgba(135,188,234,1) 100%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(top,  rgba(208,228,247,1) 0%,rgba(115,177,231,1) 24%,rgba(10,119,213,1) 50%,rgba(83,159,225,1) 79%,rgba(135,188,234,1) 100%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(to bottom,  rgba(208,228,247,1) 0%,rgba(115,177,231,1) 24%,rgba(10,119,213,1) 50%,rgba(83,159,225,1) 79%,rgba(135,188,234,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d0e4f7', endColorstr='#87bcea',GradientType=0 );
+	
+	-webkit-box-shadow: -1px -1px 66px 3px rgba(255,255,255,1);
+	-moz-box-shadow: -1px -1px 66px 3px rgba(255,255,255,1);
+	box-shadow: -1px -1px 66px 3px rgba(255,255,255,1);
 }
